--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,28 @@
-Changes to squid-2.6.STABLE12 (Mar 20 2007)
+Changes to squid-2.6.STABLE13 (8 May 2007)
+
+	- Make sure reply headers gets sent even if there is no body available
+	  yet, fixing RealMedia streaming over HTTP issues.
+	- Undo an accidental name change of storeUnregisterAbort.
+	- Kill an ancient malplaced storeUnregisterAbort call from ftp.c
+	- Bug #1814: SSL memory leak on persistent SSL connections
+	- Don't log ECONNREFUSED/ECONNABORTED accept failures in cache.log
+	- Cosmetic fix: added missing newline in WCCPv2 configuration dump.
+	- Ukrainan error messages
+	- Convert various error pages from DOS to UNIX text format
+	- Bug #1820: COSS assertion failure t->length == MD5_DIGEST_CHARS
+	- Clarify the max-conn=n cache_peer option syntax slightly
+	- Bug #1892: COSS segfault on shutdown
+	- Windows port: fix undefined ECONNABORTED
+	- Make refreshIsCachable handle ETag as a cache validator, not
+	  only last-modified
+	- in_port_t is not portable, use unsigned short instead
+	- Fix fs / auth / snmp dependencies
+
+Changes to squid-2.6.STABLE12 (20 Mar 2007)
 
 	- Assertion error on TRACE
 
-Changes to squid-2.6.STABLE11 (Mar 17 2007)
+Changes to squid-2.6.STABLE11 (17 Mar 2007)
 
 	- Bug #1915: assertion failed: client_side.c:4055: "buf != NULL ||
 	  !conn->body.request"
@@ -14,7 +34,7 @@ Changes to squid-2.6.STABLE11 (Mar 17 2007)
 	- Fix bswap16 & bwsap32 error on NetBSD
 	- Fix collapsed_forwarding for non-GET requests
 
-Changes to squid-2.6.STABLE10 (Mar  4 2007)
+Changes to squid-2.6.STABLE10 (4 Mar 2007)
 
 	- Upgrade HTTP/0.9 responses to our HTTP version (HTTP/1.0)
 	- various diskd bugfixes
@@ -45,12 +65,12 @@ Changes to squid-2.6.STABLE10 (Mar  4 2007)
 	- Added support for Subversion HTTP request methods MKACTIVITY,
 	  CHECKOUT and MERGE.
 
-Changes to squid-2.6.STABLE9 (Jan 24 2007)
+Changes to squid-2.6.STABLE9 (24 Jan 2007)
 
 	- Bug #1878: If-Modified-Since broken in 2.6.STABLE8
 	- Bug #1877 diskd bug in storeDiskdIOCallback()
 
-Changes to squid-2.6.STABLE8 (Jan 21 2007)
+Changes to squid-2.6.STABLE8 (21 Jan 2007)
 
 	- Bug #1873: authenticateNTLMFixErrorHeader: state 4.
 	- Document the https_port vhost option, useful in combination with
@@ -69,7 +89,7 @@ Changes to squid-2.6.STABLE8 (Jan 21 2007)
 	- Fix how ftp://user@host URLs is rendered when Squid is built with
 	  leak checking enabled
 
-Changes to squid-2.6.STABLE7 (Jan 13 2007)
+Changes to squid-2.6.STABLE7 (13 Jan 2007)
 
 	- Windows port: Fix intermittent build error using Visual Studio
 	- Add missing tproxy info from the dump of http port configuration
@@ -90,7 +110,7 @@ Changes to squid-2.6.STABLE7 (Jan 13 2007)
 	- Bug #1828: squid.conf docutemtation error for proxy_auth digest
 	- Bug #1867: squid.pid isn't removed on shutdown
 
-Changes to squid-2.6.STABLE6 (Dec 12 2006)
+Changes to squid-2.6.STABLE6 (12 Dec 2006)
 
 	- Bug #1817: Assertion failure assert(buflen >= copy_sz) in htcp.c htcpBuildAuth()
 	- Add client source port logformat tag >p
@@ -122,7 +142,7 @@ Changes to squid-2.6.STABLE6 (Dec 12 2006)
 	- Bug #1641: assertion failed: stmem.c:149: "size > 0" while processing certain Vary objects
 	- Fix build errors when using latest MinGW Windows environment
 
-Changes to squid-2.6.STABLE5 (Now 3 2006)
+Changes to squid-2.6.STABLE5 (3 Now 2006)
 
 	- Bug #1776: 2.6.STABLE4 aufs fails to compile if coss isn't enabled
 	- COSS improvements and cleanups
@@ -152,7 +172,7 @@ Changes to squid-2.6.STABLE5 (Now 3 2006)
 	- Added a basic comm_select_simple comm loop only requiring minimal POSIX compliance.
 	- Safeguard from kb_t counter overflows on 32-bit platforms
 
-Changes to squid-2.6.STABLE4 (Sep 23 2006)
+Changes to squid-2.6.STABLE4 (23 Sep 2006)
 
 	- Bug #1736: Missing Italian translation of ERR_TOO_BIG error page
 	- Windows port enhancement: added native exception handler with signal emulation
@@ -191,7 +211,7 @@ Changes to squid-2.6.STABLE4 (Sep 23 2006)
 	- Cosmetic cleanup to not dump stacktraces on configuration errors
 
 
-Changes to squid-2.6.STABLE3 (Aug 18 2006)
+Changes to squid-2.6.STABLE3 (18 Aug 2006)
 
 	- Bug #1577: assertion failed "fm->max_n_files <= (1 << 24)" on
 	  very large cache_dir.  Limit number of objects stored to slightly
