--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,16 @@
 	- Implementation of an external logfile daemon (ie, logging to
 	  a pipe); UDP logging (based in part on work done by Tim Starling)
 
+Changes to squid-2.6.STABLE18 (9 Jan 2008)
+
+	- Fix 2 assertion failures related to the fix for SQUID-2007:2
+	- GPL license cleanup to GPLv2 or later. One file in edir_digest_auth
+	  was GPLv2 only, now replaced with a GPLv2 or later licensed vesion.
+	- Minor cleanups to make certain 64-bit platforms happier
+	- Several Digest authentication bugs fixed wich was causing random
+	  authenitcation popups or failures.
+	- --with-valgrind-debug updated for valgrind-3.3.0.
+
 Changes to squid-2.6.STABLE17 (26 Nov 2007)
 
 	- Fix compile error with old GCC 2.x or other ANSI-C compilers before
