--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,54 @@
+	- cache_peer idle=n option to specify a minimum number of idle
+	  connections to keep open
+	- Imported squidclient fixes from http11 branch
+	- X-Cache-Age header when using act-as-origin
+	- Bug #1843: multicast-siblings cache_peer option for optimising
+	  multicast ICP relations
+	- Small script to verify that translated error pages uses the same %
+	  codes
+	- Changed most temporary & forwarding errors to return 504 Gateway
+	  Timeout
+	- support for FreeBSD accept filters
+	- -I command line option to accept open socket on stdin
+	- Clean up filedescriptor limitations, and handle comm loop
+	  restrictions proper
+	- max_filedescriptor squid.conf option
+	- external_acl_type %URI tag for referencing the complete requested
+	  URI
+	- logformat %rp logging the URL-Path only (excluding hostname)
+	- new logformat tag for logging the outgoing IP address
+	  (tcp_outgoing_address)
+	- Rename cache_dir option read-only to no-store
+	- act-as-origin http_port option, making Squid act as if it was
+	  the origin server
+	- Use the client's DNS lookup if our DNS lookup fails on
+	  transparent requests
+	- Clean up X-Forwarded-For acl_uses_indirect_client to make most
+	  acls behave
+	- Change cachemgr filedescriptors timeout column to seconds
+	- Strengthen the HTTP protocol parser further wrt integer errors
+	- Simplified epoll comm loop
+	- Clean up use of httpReplySetHeaders to be consistent across the
+	  code, and remove the unneeded http_version argument.
+	- Kill the psuedo-support for wais. Was never really implemented.
+	- Optimization to only parse response headers once, reusing the
+	  already parsed headers when building the client reply.
+	- Simple perl library and script for processing access.log files
+	- General code tidyups of HTTP parser and related optimizations
+	- Add "%sn" - a sequence number - to the customlog format
+	- Implementation of an external logfile daemon (ie, logging to
+	  a pipe); UDP logging (based in part on work done by Tim Starling)
+
+Changes to squid-2.6.STABLE18 (9 Jan 2008)
+
+	- Fix 2 assertion failures related to the fix for SQUID-2007:2
+	- GPL license cleanup to GPLv2 or later. One file in edir_digest_auth
+	  was GPLv2 only, now replaced with a GPLv2 or later licensed vesion.
+	- Minor cleanups to make certain 64-bit platforms happier
+	- Several Digest authentication bugs fixed wich was causing random
+	  authenitcation popups or failures.
+	- --with-valgrind-debug updated for valgrind-3.3.0.
+
 Changes to squid-2.6.STABLE17 (26 Nov 2007)
 
 	- Fix compile error with old GCC 2.x or other ANSI-C compilers before
