--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -39,7 +39,9 @@
 	- Implementation of an external logfile daemon (ie, logging to
 	  a pipe); UDP logging (based in part on work done by Tim Starling)
 
-Changes to squid-2.6.STABLE18 (9 Jan 2008)
+Changes to squid-2.7.STABLE1 (not yet released)
+
+Changes to squid-2.6.STABLE18 (10 Jan 2008)
 
 	- Fix 2 assertion failures related to the fix for SQUID-2007:2
 	- GPL license cleanup to GPLv2 or later. One file in edir_digest_auth
