--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	- TCP keepalive support
+	- Stricter MemPool debug mode detecting double free and filling freed
+	  objects with garbage
 	- Optimization using reference counted memory cache to avoid repeated
 	  copying of data.
 	- Use the client's DNS lookup if our DNS lookup fails on
@@ -72,13 +75,20 @@ Changes to squid-2.7.STABLE1 (not yet released)
 	- Make visible_hostname a soft error
 	- Ability to cache authentication based on source IP, mainly to
 	  work around NTLM inefficiencies, but other uses possible.
-	- suqid.conf include support
+	- squid.conf include support
+	- squid_ldap_group option to strip kerberos realm from username
 
 Changes to squid-2.6.STABLE19 (not yet released)
 
 	- Fix tcp_outgoing_address example config to match its description
 	- Bug #2198: assertion failed sc != NULL when using peer monitor
 	  function
+	- Bugzilla #761 : Handle recursive completion operations in diskd.
+	- Fix missing default disk store type into QUICKSTART example.
+	- Bugzilla #761 : Handle recursive completion operations in diskd.
+	- documentation bugfix for tcp_outgoing_tos directive
+	- Sort cache list in wccpv2 to ensure a consistent hash allocation
+	  across all services
 
 Changes to squid-2.6.STABLE18 (10 Jan 2008)
 
