--- a/trunk/errors/Ukrainian-1251/README
+++ b/trunk/errors/Ukrainian-1251/README
@@ -1,2 +1,4 @@
-Thank you to Петро Нек <mr.petruccio@gmail.com> for creating
-these error pages in Ukrainan
+Thank you to
+	Петро Нек <mr.petruccio@gmail.com>
+	Vitaliy Matytsyn (main) <vm@if.bank.gov.ua>
+for creating these error pages in Ukrainian!
