--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -89,6 +89,7 @@ Changes to squid-2.6.STABLE19 (not yet released)
 	- documentation bugfix for tcp_outgoing_tos directive
 	- Sort cache list in wccpv2 to ensure a consistent hash allocation
 	  across all services
+	- Updated Ukrainan error pages
 
 Changes to squid-2.6.STABLE18 (10 Jan 2008)
 
