--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Changes to squid-2.6.STABLE19 (not yet released)
+
+	- Fix tcp_outgoing_address example config to match its description
+	- Bug #2198: assertion failed sc != NULL when using peer monitor
+	  function
+	- Bugzilla #761 : Handle recursive completion operations in diskd.
+	- Fix missing default disk store type into QUICKSTART example.
+	- Bugzilla #761 : Handle recursive completion operations in diskd.
+	- documentation bugfix for tcp_outgoing_tos directive
+	- Sort cache list in wccpv2 to ensure a consistent hash allocation
+	  across all services
+	- Updated Ukrainan error pages
+
 Changes to squid-2.6.STABLE18 (10 Jan 2008)
 
 	- Fix 2 assertion failures related to the fix for SQUID-2007:2
