--- a/ChangeLog
+++ b/ChangeLog
@@ -1,15 +1,19 @@
-Changes to squid-2.6.STABLE19 (not yet released)
+Changes to squid-2.6.STABLE19 (19 Mar 2008)
 
 	- Fix tcp_outgoing_address example config to match its description
 	- Bug #2198: assertion failed sc != NULL when using peer monitor
 	  function
-	- Bugzilla #761 : Handle recursive completion operations in diskd.
 	- Fix missing default disk store type into QUICKSTART example.
 	- Bugzilla #761 : Handle recursive completion operations in diskd.
 	- documentation bugfix for tcp_outgoing_tos directive
 	- Sort cache list in wccpv2 to ensure a consistent hash allocation
 	  across all services
 	- Updated Ukrainan error pages
+	- Compile error in squid_kerb_auth under Mac OS X 10.5.2
+	- squid_radius_auth failed ro process more than 256 requests
+	- Clarified description of 'cache_vary' directive
+	- Make range_offset_limit 0 disable local range processing as
+	  documented, even if the first range starts at 0
 
 Changes to squid-2.6.STABLE18 (10 Jan 2008)
 
