--- a/wiki/MailingLists.wiki
+++ b/wiki/MailingLists.wiki
@@ -4,8 +4,8 @@
 
 There's a few mailing lists:
 
-  * cacheboy-dev@googlegroups.com - development discussion
-  * cacheboy-users@googlegroups.com - user discussion
-  * cacheboy-commit@googlegroups.com - commit messages
+  * cacheboy-dev@googlegroups.com - [http://groups.google.com/group/cacheboy-dev] - development discussion
+  * cacheboy-users@googlegroups.com - [http://groups.google.com/group/cacheboy-users] - user discussion
+  * cacheboy-commit@googlegroups.com - [http://groups.google.com/group/cacheboy-commit] - commit messages
 
 The automated commit messages don't seem to be appearing yet - I'll see if I can figure that one out.
