Edited wiki page through web user interface.

--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -14,7 +14,7 @@ This page is meant primarily as a kick for Adrian to remember what he needs to d
    * gb_t *done*
    * kb_t
    * mem
-   * mempool
+   * mempool *done*
    * cbdata
    * string
    * membuf
