Edited wiki page through web user interface.

--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -17,7 +17,7 @@ This page is meant primarily as a kick for Adrian to remember what he needs to d
    * mempool *done*
    * memstr *done*
    * cbdata
-   * string
+   * string *done*
    * membuf
 
 = Benchmarking =
