--- a/wiki/DownloadSource.wiki
+++ b/wiki/DownloadSource.wiki
@@ -8,4 +8,8 @@ To grab it (read-only) via Subversion:
 
 You will need to run "bootstrap.sh" in the source tree to generate the build environment. Make sure you've read AutoTools to install a known working autoconf/automake environment.
 
+If you'd like to checkout a specific revision then you can try:
+
+*svn checkout -r revisionid http://cacheboy.googlecode.com/svn/branches/CACHEBOY_PRE
+
 Be careful when browsing the source via the Source browser - it seems to hang the browser. I'm not sure if its due to the number of tags, branches or revisions.
